--- a/src/component/dashboard/style.css
+++ b/src/component/dashboard/style.css
@@ -4,7 +4,7 @@
     /* border-radius: 0.5rem; */
     box-shadow: 0px 2px 6px #0000000a;
     border-radius: 12px;
-    height: 134px;
+    height: 100%;
   }
   
   .f-14 {
@@ -80,7 +80,7 @@
   } */
   
   .dashboard-inventory {
-    /* height: 300px; */
+    height: 100%;
     border-radius: 70px;
     overflow: hidden;
     margin-top: 5px;
