--- a/src/component/userDashboard/user.css
+++ b/src/component/userDashboard/user.css
@@ -24,7 +24,7 @@ a
 } */
 body{
     background-color: #f0f1f3;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Lato,sans-serif;
     
 }
 .card{
