--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,33 @@ code {
   /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace; */
 }
+.pencil {
+  width: 10px;
+  height: 10px;
+  background: dimgray;
+  position: relative;
+  transform: rotate(30deg);
+  margin: -20px 50px;
+  cursor: pointer;
+}
+.pencil::before {
+  content: "" ;
+  position: absolute ;
+  width: 10px ;
+  height: 10px ;
+  background: dimgray ;
+  top: -13px ;
+}
+.pencil::after {
+  content: "" ;
+  position: absolute ;
+  width: 8px ;
+  height: 8px ;
+  background: dimgray ;
+  left: 1px ;
+  bottom: -4px ;
+  transform: rotate(45deg);
+}
+#profile-photo-input{
+  display: none;
+}
