--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -115,6 +115,12 @@ ul {
     /* overflow: hidden; */
 }
 
+.dashboard__icon {
+    background-color: #5C55BF;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+}
+
 .dashboard__summary {
     padding: 0 1rem;
     margin-bottom: 2rem;
