--- a/src/component/userDashboard/user.css
+++ b/src/component/userDashboard/user.css
@@ -425,7 +425,6 @@ body {
   font-weight: 400;
   font-size: 12px;
   background-color: white;
-  border-bottom: 1px solid #C4C4C4 !important;
   border: none;
 
 }
@@ -451,10 +450,6 @@ body {
 
 }
 
-.react-calendar__month-view__weekdays {
-  border-bottom: 1px solid #C4C4C4;
-
-}
 
 .react-calendar__navigation__label {
   position: relative;
@@ -464,7 +459,10 @@ body {
   border: none;
 
 }
-
+.react-calendar__navigation{
+  position: absolute;
+    top: -5px;
+}
 .content {
   font-size: 20px;
   color: blue;
@@ -476,7 +474,6 @@ body {
     /* left: 503px; */
     /* top: 447px; */
     background: #FFFFFF;
-    box-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
     border-radius: 20px;
     position: relative;
 }
@@ -598,8 +595,7 @@ body {
   overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
-  top: 33px;
-  margin-top: -32px;
+  top: 95px;
 }
 
 ::-webkit-scrollbar {
@@ -619,4 +615,36 @@ body {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #5C55BF;
+}
+
+.acc-card{
+  width: 835px;
+    height: 63px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
+    border-radius: 20px 20px 0px 0px;
+    position: relative;
+}
+.faq-accordian{
+  position: relative;
+  top: 53px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
+  width: 835px;
+  height: 48px;
+  left: -20px;
+}
+
+.ant-collapse-item{
+  background: #FFFFFF;
+    box-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
+    position: relative;
+    width: 834px;
+    margin-top: 22px;
+    margin-bottom: 10px;
+}
+
+.scrollit {
+  overflow:scroll;
+  height:100px;
 }
