--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -34,6 +34,8 @@ body {
 
 /* header */
 .header__section {
+    width: calc(100% - 80px);
+    margin-left: auto;
     /* border: 1px solid red; */
     /* position: fixed;
     top: 0;
@@ -52,6 +54,11 @@ body {
 
 .menu__navigation li {
     list-style-type: none;
+    margin-top: 24px;
+    margin-right: 32px;
+}
+.menu__navigation li figure{
+    margin: 0 !important;
 }
 
 /* header */
@@ -66,29 +73,57 @@ body {
     height: 100%;
     overflow: hidden;
     text-align: center;
-    padding-top: 16px;
-    width: 60px;
+    padding: 16px;
+    padding-top: 24px;
+    width: 80px;
 }
 
 .profile__img__layout {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 }
-
-.profile__img {
+.profile__img__layout .profile{
+    position: relative;
+}
+.profile__img__layout .profile__img {
     object-fit: cover;
     border-radius: 50%;
+}
+.profile__img__layout .profile__dropdown {
+    position: absolute;
+    top: 50%;
+    right: -10px;
 }
 
 .sidebar__ul li {
     list-style-type: none;
-    margin-bottom: 1rem;
+    padding: 12px;
     border-right: 1px solid transparent;
+    position: relative;
 }
 
-.sidebar__ul li.active {
-    border-right: 1px solid blueviolet;
+.sidebar__ul li img{
+    width: 24px;
+    height: 24px;
 }
 
+.sidebar__ul li.active::after {
+    content: '';
+    position: absolute;
+    top: 12px;
+    right: -16px;
+    width: 2px;
+    height: 24px;
+    background-color: #5C55BF;
+    border-radius: 5px;
+}
+.sidebar__divider{
+    width: 100%;
+    height: 2px;
+    background-color: #BEC3CE;
+    padding: 0px !important; 
+    margin-top: 6px;
+    margin-bottom: 6px;
+}
 ul {
     list-style-type: none;
 }
@@ -114,17 +149,17 @@ ul {
     color: #555;
     padding: 10px 0px;
     font-size: 14px;
-    font-weight: bold;
 }
 
 /* sidebar */
 
 /* content__section */
 .content__section {
-    width: calc(100% - 60px);
+    width: calc(100% - 80px);
     height: calc(100vh - 66px);
     /* margin-top: 65px; */
     margin-left: auto;
+    padding: 32px
     /* overflow: hidden; */
 }
 
@@ -132,6 +167,7 @@ ul {
     background-color: #5C55BF;
     padding: 0.5rem;
     border-radius: 0.3rem;
+    width: 48px;
 }
 
 .dashboard__summary {
@@ -140,10 +176,10 @@ ul {
 }
 
 .section__title {
-    color: blueviolet;
+    color: #5C55BF;
     font-size: 20px;
     margin-bottom: 1rem;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .tickets__box {
@@ -151,7 +187,7 @@ ul {
     background: #ffffff;
     padding: 0.5rem;
     border-radius: 10px;
-    min-height: 127px;
+    min-height: 90px;
     display: flex;
 }
 
@@ -160,16 +196,15 @@ ul {
 }
 
 .table__box {
-    text-align: center;
     font-weight: 500;
-    font-size: 0.8rem;
-    border-bottom: 1px solid #eeeeee;
+    border-bottom: 1px solid #C4C4C4;
     border-collapse: collapse;
-    padding: 0.4rem;
+    padding: 0.5rem;
+    font-size: 14px;
 }
 
 .table__boxborder {
-    border-top: 1px solid #eeeeee;
+    border-top: 1px solid #C4C4C4;
 }
 
 .table_number_color {
@@ -177,9 +212,28 @@ ul {
 }
 
 .table__style {
+    max-height: 300px;
     width: 100%;
     border-collapse: collapse;
 
+}
+
+.table__style tr .table__box:not(:first-child){
+    text-align: center;
+}
+
+.table__style::-webkit-scrollbar {
+    width: 8px;
+}
+
+.table__style::-webkit-scrollbar-thumb {
+    border-radius: 0.5rem;
+    background-color: #5C55BF;
+}
+
+.table__style::-webkit-scrollbar-track {
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    background-color: #F4F4F4;
 }
 
 .ch__content {
@@ -187,40 +241,46 @@ ul {
 }
 
 .tickets__title {
-    font-size: 1rem;
-    color: #000000;
-    text-transform: capitalize;
+    font-size: 14px;
+    line-height: 26px;
     font-weight: 600;
+    color: #2D3142;
+    text-transform: capitalize;
     margin: 0;
 }
 
 .tickets__count {
-    font-size: 0.8rem;
+    font-size: 12px;
+    line-height: 14px;
     margin: 0;
+    font-weight: 400;
 }
 
 .tickets__viewDetails {
-    font-size: 0.6rem;
+    font-size: 12px;
+    line-height: 18px;
     opacity: 0.9;
     margin: 0;
+    font-weight: 400;
 }
 
 .support__title {
     font-size: 20px;
-    margin-bottom: 1rem;
-    font-weight: 600;
+    margin-top: 24px;
+    margin-bottom: 16px;
+    font-weight: 400;
 }
 
 .category__box {
     box-shadow: 0px 4px 15px 0px #00000040;
     /* box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px; */
-    padding: 1rem;
+    padding: 12px 24px;
     border-radius: 0.5rem;
     background-color: white;
 }
 
 .category__box__ht__max {
-    height: 180px;
+    height: 300px;
     overflow: hidden;
     overflow-y: auto;
 }
@@ -250,10 +310,10 @@ ul {
 }
 
 .category__title {
-    font-size: 0.8rem;
     text-transform: capitalize;
     margin-bottom: 1rem;
-    font-weight: bold;
+    font-weight: 400;
+    font-size: 16px;
 }
 
 .statistics__section {
