--- a/src/component/userDashboard/user.css
+++ b/src/component/userDashboard/user.css
@@ -533,7 +533,7 @@ body {
   left: 20px;
 }
 
-.active {
+.button-div .active {
   background: #BF5555;
   color: white;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.25);
