--- a/src/component/layout/sidebar2/index.css
+++ b/src/component/layout/sidebar2/index.css
@@ -77,7 +77,7 @@
 
 }
 
-.compliance-logo {
+/* .compliance-logo {
     position: absolute;
     width: 100px;
     height: 42px;
@@ -91,16 +91,16 @@
     height: 42px;
     left: 172px;
     top: 14px;
-}
+} */
 
-.life-sciencelogo {
+/* .life-sciencelogo {
     position: absolute;
     width: 100px;
     height: 42px;
     left: 311px;
     top: 14px;
 
-}
+} */
 
 .contact-card {
     position: absolute;
