--- a/src/component/tickets/index.css
+++ b/src/component/tickets/index.css
@@ -113,9 +113,11 @@
     font-style: normal;
     font-weight: 400;
     font-size: 19px;
-    line-height: 28px;
+    line-height: 16px;
     text-align: center;
     padding: 10px;
+    background: transparent;
+    border: none;
 }
 
 .export {
@@ -196,4 +198,18 @@
     color: #2D3142;
     text-align: start !important;
 
+}
+
+.filter-btn{
+    background: transparent;
+    font-family: 'Rubik';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    color: #2D3142;
+}
+.filter-ticket{
+    position: relative;
+    top: 60px;
 }
