--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,29 @@
-.App{
-  background: #FAFAFA;
+.App {
+  background: #fafafa;
 }
 
-.alert, .brand, .btn-simple, .h1, .h2, .h3, .h4, .h5, .h6, .navbar, .td-name, a, body, button.close, h1, h2, h3, h4, h5, h6, p, td{
+.alert,
+.brand,
+.btn-simple,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+.navbar,
+.td-name,
+a,
+body,
+button.close,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+td {
   font-family: 'Rubik';
   font-weight: normal;
 }
@@ -11,7 +32,7 @@
   z-index: 999 !important;
 }
 
-.sidebar.sidebar-style-2 .nav.nav-primary>.nav-item.active>a {
+.sidebar.sidebar-style-2 .nav.nav-primary > .nav-item.active > a {
   background-color: #5c55bf !important;
 }
 
@@ -26,7 +47,6 @@
 }
 
 .banner-img {
-
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -75,7 +95,7 @@
 }
 
 .logo {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .login-logo {
@@ -86,7 +106,7 @@
   padding: 70px 40px;
 }
 
-.auth-wrapper .auth-side-form>* {
+.auth-wrapper .auth-side-form > * {
   position: relative;
   z-index: 5;
 }
@@ -103,7 +123,7 @@
   top: 0px;
   border-radius: 0px;
 
-  background: #DDE9FF;
+  background: #dde9ff;
 }
 
 .form-container {
@@ -151,7 +171,7 @@
 }
 
 .status:before {
-  content: "\A";
+  content: '\A';
   width: 8px;
   height: 8px;
   border-radius: 50%;
@@ -301,4 +321,14 @@ form label {
 
 .ant-collapse {
   border: none;
+}
+
+.primary__save__button {
+  background: #5c55bf;
+  color: #ffffff;
+}
+
+.primary__cancel__button {
+  border: 1px solid #5c55bf;
+  background: transparent;
 }
