--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -156,6 +156,10 @@ ul {
     box-shadow: 0px 4px 15px rgb(0 0 0 / 25%)!important;
     border-radius: 20px;
     color: white;
+    margin: 8px 15px;
+    height: 32px;
+    min-height: 32px;
+    min-width: 30px!important;
 }
 
 .parentTabs .MuiAppBar-colorPrimary {
@@ -244,6 +248,12 @@ ul {
 .table_number_color {
     color: #000000;
 }
+.tableWrapper{
+overflow-y: auto;
+height: 90%;
+width: 105%;
+padding-right: 5%;
+}
 
 .table__style {
     max-height: 300px;
@@ -316,7 +326,16 @@ ul {
 .category__box__ht__max {
     height: 450px;
     overflow: hidden;
+    
+}
+.category__box__ht__max> .parentTabs{
+    height: 100%;
+}
+.category__box__ht__max div[role="tabpanel"] {
     overflow-y: auto;
+    height: 70%;
+    width: 105%;
+    padding-right: 5%;
 }
 
 .category__box__ht__max::-webkit-scrollbar {
@@ -340,7 +359,11 @@ ul {
 }
 
 .category__box:first-child {
-    margin-bottom: 1rem;
+    margin-bottom: 50px;
+}
+.col-4{
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .category__title {
@@ -371,6 +394,7 @@ ul {
     width: 100%;
     padding: 24px;
     padding-bottom: 0px;
+    overflow-y: auto;
 }
 .mixed-chart-title{
     height: 14px;
@@ -441,10 +465,13 @@ ul {
   .react-calendar__navigation__label {
     position: relative;
     top: 2px;
-    left: 200px;
+    left: 300px;
     background: white;
     border: none;
   
+  }
+  .calender{
+      margin-top:45px
   }
   .react-calendar__navigation{
     position: absolute;
