--- a/src/component/layout/userLayout/sidebar/index.css
+++ b/src/component/layout/userLayout/sidebar/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Rubik;
-    src: url("../../assets/fonts/Rubik-Regular.ttf");
+    src: url("../../../assets/fonts/Rubik-Regular.ttf");
 }
 
 .user {
