--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -194,10 +194,11 @@ ul {
 /* content__section */
 .content__section {
     width: calc(100% - 80px);
-    height: calc(100vh - 66px);
+    /* height: calc(100vh - 66px); */
     /* margin-top: 65px; */
     margin-left: auto;
-    padding: 32px
+    padding: 32px;
+    padding-bottom: 20px;
     /* overflow: hidden; */
 }
 
