--- a/src/component/inventory/reusableComponents/filters/style.css
+++ b/src/component/inventory/reusableComponents/filters/style.css
@@ -1,5 +1,6 @@
 .filter__component {
   padding: 40px 0;
+  padding-right: 20px;
 }
 .filter__component .filters__view {
   display: flex;
@@ -86,7 +87,9 @@
 input[type='search']::placeholder {
   color: #bbb;
 }
-
+.right__filters button:last-child {
+  margin-right: 0px!important;
+}
 @media only screen and (max-width: 768px) {
   .filter__component {
     padding: 10px 0;
