--- a/src/component/AdminDashboard/admin-dashboard.css
+++ b/src/component/AdminDashboard/admin-dashboard.css
@@ -365,7 +365,7 @@ padding-right: 5%;
 .category__box__ht__min {
     height: 300px;
     overflow: hidden;
-    overflow-y: auto;
+    /* overflow-y: auto; */
 }
 .ticketRequestWrapper [aria-label="nav tabs example"] > a.MuiTab-textColorInherit.Mui-selected{
     background: #62BC46;
@@ -397,6 +397,13 @@ color: #2D3142;
 }
 
 .category__title {
+    text-transform: capitalize;
+    margin-bottom: 1rem;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.ticket__title {
     text-transform: capitalize;
     margin-bottom: 1rem;
     font-weight: 400;
@@ -541,4 +548,46 @@ fill:black;
 
   .MuiSvgIcon-root{
       fill:transparent !important
+  }
+
+.inner__category__box{
+    height: 100%;
+}
+
+  @media (max-width: 575.98px) {
+    .category__box__ht__max, .category__box__ht__min {
+        min-height: 300px;
+        height: auto;
+    }
+
+    .category__box:first-child {
+        margin-bottom: inherit;
+    }
+
+    .content__section {
+        padding: 1rem;
+        /* overflow: hidden; */
+    }
+
+    .category__box{
+        position: relative;
+    }
+
+    /* .category__title {
+        position: absolute;
+        top: 1rem;
+        z-index: 9;
+    } */
+
+    /* .inner__category__box {
+        overflow-y: auto;
+        min-height: calc(300px - 30px);
+        padding-top: 40px;
+        height: 100%;
+    } */
+  }
+
+  .mixed-chart-vh{
+    height: calc(300px - 60px);
+    overflow-y: auto;
   }
