--- a/src/component/userDashboard/user.css
+++ b/src/component/userDashboard/user.css
@@ -674,3 +674,24 @@ body {
 .toggle-button-checked {
   background-color: brown;    
 }
+
+.form-control{
+  font-size: 14px;
+  border-color: #ebedf2;
+  padding: 0.6rem 1rem;
+  height: inherit!important;
+  border: none;
+  border-bottom: 1px solid;
+  padding-left: 45px;
+
+}
+.visuallyhidden {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
