--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+body {
+  width: 125% !important;
+  height: 200% !important;
+  transform-origin: top left;
+  transform: scale(80%);
+  overflow-x:hidden;
+}
 code {
   /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace; */
