--- a/src/component/userDashboard/user.css
+++ b/src/component/userDashboard/user.css
@@ -621,7 +621,6 @@ body {
 }
 
 .acc-card{
-  width: 835px;
     height: 63px;
     background: #FFFFFF;
     box-shadow: 0px 4px 15px rgb(0 0 0 / 25%);
@@ -692,4 +691,10 @@ body {
   padding: 0;
   position: absolute;
   width: 1px;
+}
+.user-menu-popup{
+  position: absolute;
+    z-index: 1300;
+    inset: 0px;
+    left: 160px;
 }
