--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,20 @@ code {
 #profile-photo-input{
   display: none;
 }
+
+.MuiTableSortLabel-icon{
+  color:white !important;
+  opacity:1 !important
+}
+.user-dropdown{
+  position: absolute;
+  width: 19px;
+  height: 40px;
+  left: 263px;
+  top: 93px;
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 40px;
+}
